feito estilização do assessment e organização do css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="./src/css/assessment.css">
 
+  <link rel="stylesheet" href="./src/css/global.css">
+
   <title>Interactive rating  | Vinícius Inocêncio </title>
 
 
@@ -35,7 +37,7 @@
         <span>4</span>
         <span>5</span>
       </div>
-      <button> Submit</button>
+      <button class="button">Submit</button>
     </section>
     <section class="result">
       <div class="image">
