feito o card do result

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
 
   <link rel="stylesheet" href="./src/css/assessment.css">
-
+  <link rel="stylesheet" href="./src/css/result.css">
   <link rel="stylesheet" href="./src/css/global.css">
 
   <title>Interactive rating  | Vinícius Inocêncio </title>
-
-
 
 </head>
 
@@ -37,14 +35,15 @@
         <span>4</span>
         <span>5</span>
       </div>
-      <button class="button">Submit</button>
+      <button id="button">Submit</button>
     </section>
+
     <section class="result">
       <div class="image">
         <img src="./src/images/illustration-thank-you.svg">
       </div>
       <div class="range">
-        <p>You selected <span>x</span> out of 5</p>
+        <p>You selected <span>#</span> out of 5</p>
       </div>
       <div class="info-result">
         <h2>Thank you!</h2>
@@ -54,6 +53,7 @@
     </section>
   </main>
 
+  <script src="./src/js/index.js"></script>
 </body>
 
 </html>
