feito seleção de notas e critério pra enviar

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </p>
       </div>
       <div class="numbers">
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>4</span>
-        <span>5</span>
+        <span class="score">1</span>
+        <span class="score">2</span>
+        <span class="score">3</span>
+        <span class="score">4</span>
+        <span class="score">5</span>
       </div>
       <button id="button">Submit</button>
     </section>
@@ -43,7 +43,7 @@
         <img src="./src/images/illustration-thank-you.svg">
       </div>
       <div class="range">
-        <p>You selected <span>#</span> out of 5</p>
+        <p>You selected <span id="score-place">#</span> out of 5</p>
       </div>
       <div class="info-result">
         <h2>Thank you!</h2>
