Criação do botão voltar e da informação de qual nota foi selecionada.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./src/css/assessment.css">
   <link rel="stylesheet" href="./src/css/result.css">
   <link rel="stylesheet" href="./src/css/global.css">
+  <link rel="stylesheet" href="./src/css/responsive.css">
 
   <title>Interactive rating  | Vinícius Inocêncio </title>
 
@@ -49,6 +50,9 @@
         <h2>Thank you!</h2>
         <p>We appreciate you taking the time to give a rating. If you ever need more support,
           don’t hesitate to get in touch!</p>
+      </div>
+      <div id="back">
+        <p>←</p>
       </div>
     </section>
   </main>
